fix floating of additionals modules in admin

--- a/i18n/static/i18n/admin-languages.css
+++ b/i18n/static/i18n/admin-languages.css
@@ -9,7 +9,11 @@
   text-decoration:underline;
 }
 #all_languages { float:left; }
+fieldset.module {
+  clear: left;
+}
 fieldset.language {
+  clear: none;
   float: left;
   width: 430px;
   margin-right: 5px;
