--- a/localizedfields/static/localizedfields/localizedfields.css
+++ b/localizedfields/static/localizedfields/localizedfields.css
@@ -28,3 +28,16 @@ div.item-content div.form-row {
   overflow: visible;
 }
 div.inline-group, #main_wrapper, .submit-row {clear:left;}
+
+.language-toggle {
+  float: right;
+  display: inline-block;
+}
+
+.language-toggle label {
+  color: #ffffff;
+  font-weight: bold !important;
+  padding: 0px !important;
+  width: auto !important;
+  margin: 0 5px 0 0;
+}
