Remove left margin from help texts

--- a/localizedfields/static/localizedfields/localizedfields.css
+++ b/localizedfields/static/localizedfields/localizedfields.css
@@ -54,3 +54,8 @@ div.inline-group, #main_wrapper, .submit-row {clear:left;}
   padding: 1px;
   border: 0px;
 }
+
+form fieldset.module.language p {
+  margin: 0;
+  padding: 1px;
+}
