--- a/localizedfields/static/localizedfields/localizedfields.css
+++ b/localizedfields/static/localizedfields/localizedfields.css
@@ -1,3 +1,8 @@
+ #main {
+  width: 90vw !important;
+  padding: 0 !important;
+}
+
 .vLargeTextField, .item-richtext {
   width:300px !important;
   height:120px !important;
@@ -7,19 +12,43 @@
   width:300px !important;
 }
 
-#language-selector label.translated {
-  text-decoration:underline;
+div[class*=wrapper]:nth-child(even) {
+  background: #f5f4f5
 }
 
-#all_languages {float:left;}
+.module.aligned {
+  width: 90vw;
+}
 
-fieldset.module {
-  clear: left;
+.link-wrapper,
+.name-wrapper,
+.title-wrapper,
+.text-wrapper,
+.button-wrapper,
+.image-wrapper,
+.cropping-wrapper,
+.headline-wrapper,
+.teaser-wrapper,
+.black_overlay_text-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+label {
+  font-weight: 700;
+}
+
+#language-selector {
+  float: right;
+}
+
+#language-selector label.translated {
+  text-decoration: underline;
 }
 
 fieldset.language {
-  clear: none;
-  float: left;
   width: 430px;
   margin-right: 5px;
 }
@@ -31,12 +60,13 @@ fieldset.language h2 {
 }
 
 div.item-content div.form-row {
-  float:left;
   border-bottom:none;
   overflow: visible;
 }
 
-div.inline-group, #main_wrapper, .submit-row {clear:left;}
+#all_languages {
+  display: flex;
+}
 
 .fallback-toggle {
   float: right;
@@ -46,22 +76,21 @@ div.inline-group, #main_wrapper, .submit-row {clear:left;}
 .fallback-toggle label {
   color: #ffffff;
   font-weight: bold !important;
-  padding: 0px !important;
+  padding: 0 !important;
   width: auto !important;
   margin: 0 5px 0 0;
 }
 
 #language-selector {
   display: inline-block;
-  float: right;
-  margin-top: 0px;
-  padding: 0px;
-  border: 0px;
+  margin-top: 0;
+  padding: 0;
+  border: 0;
 }
 
 #language-selector .form-row {
   padding: 1px;
-  border: 0px;
+  border: 0;
 }
 
 form fieldset.module.language p {
@@ -71,7 +100,6 @@ form fieldset.module.language p {
 
 fieldset.lang-processed label {
   padding: 1px 1px 0 1px;
-  float: none;
 }
 
 fieldset.lang-processed > div {
