--- a/localizedfields/static/localizedfields/localizedfields.css
+++ b/localizedfields/static/localizedfields/localizedfields.css
@@ -3,11 +3,6 @@
   padding: 0 !important;
 }
 
-.vLargeTextField, .item-richtext {
-  width:300px !important;
-  height:120px !important;
-}
-
 .vTextField {
   width:300px !important;
 }
@@ -16,9 +11,6 @@ div[class*=wrapper]:nth-child(even) {
   background: #f5f4f5
 }
 
-.module.aligned {
-  width: 90vw;
-}
 
 .link-wrapper,
 .name-wrapper,
@@ -40,12 +32,40 @@ label {
   font-weight: 700;
 }
 
+.headline-wrapper .field-headline div {
+  width: 624px;
+  margin-right: 70px;
+}
+
+.headline-wrapper .field-headline div input {
+  width: 100% !important;
+}
+
 #language-selector {
-  float: right;
+  display: inline-block;
+  margin-top: 0;
+  padding: 0;
+  border: 0;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  background: #f5f4f5;
 }
 
 #language-selector label.translated {
   text-decoration: underline;
+}
+
+#language-selector .form-row {
+  padding: 1px;
+  border: 0;
+  margin: 10px 0;
+  color: #666666;
+  font-weight: bold;
+}
+
+#language-selector .form-row input:first-child {
+  margin-left: 10px;
 }
 
 fieldset.language {
@@ -66,6 +86,12 @@ div.item-content div.form-row {
 
 #all_languages {
   display: flex;
+  width: 90vw !important;
+  flex-wrap: wrap;
+}
+
+#all_languages .module.aligned {
+  width: 30%;
 }
 
 .fallback-toggle {
@@ -79,18 +105,6 @@ div.item-content div.form-row {
   padding: 0 !important;
   width: auto !important;
   margin: 0 5px 0 0;
-}
-
-#language-selector {
-  display: inline-block;
-  margin-top: 0;
-  padding: 0;
-  border: 0;
-}
-
-#language-selector .form-row {
-  padding: 1px;
-  border: 0;
 }
 
 form fieldset.module.language p {
@@ -107,3 +121,7 @@ fieldset.lang-processed > div {
   border-left: 1px dotted #cccccc;
 }
 
+.form-row div label {
+  width: 100% !important;
+  padding: 0 !important;
+}
